# megabouts

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE.md  README.md  code_organization.html  code_organization.md  genindex.html  index.html  objects.inv  preprocessing.html  py-modindex.html  pyproject.toml  randomtests.py  requirements_todo.txt  search.html  searchindex.js  segmentation.html  setup.py  tutorials.html  usage.html
.doctrees/: environment.pickle  index.doctree  preprocessing.doctree  segmentation.doctree  tutorials.doctree  usage.doctree
.doctrees/api/: classification.doctree  index.doctree  megabouts.doctree  pipeline.doctree  preprocessing.doctree  segmentation.doctree  tracking_data.doctree  utils.doctree
.doctrees/notebooks/: Loading_Data.doctree  tutorial_FullTracking_Pipeline.doctree  tutorial_HeadRestrained_Pipeline.doctree  tutorial_Tail_Classification.doctree  tutorial_Tail_Preprocessing.doctree  tutorial_Tail_Segmentation.doctree  tutorial_TrajTracking_Pipeline.doctree  tutorial_Traj_Preprocessing.doctree  tutorial_Traj_Segmentation.doctree
.github/: tracking_data.py
.github/workflows/: publish.yml  sphinx_docs.yaml
_modules/: index.html
_modules/megabouts/utils/: utils_plot.html
_sources/: index.rst.txt  segmentation.rst.txt  tutorials.rst.txt  usage.rst.txt
_sources/api/: pipeline.rst.txt  preprocessing.rst.txt
_sources/notebooks/: Loading_Data.ipynb.txt  tutorial_FullTracking_Pipeline.ipynb.txt  tutorial_HeadRestrained_Pipeline.ipynb.txt  tutorial_Tail_Classification.ipynb.txt  tutorial_Tail_Preprocessing.ipynb.txt  tutorial_Tail_Segmentation.ipynb.txt  tutorial_TrajTracking_Pipeline.ipynb.txt  tutorial_Traj_Preprocessing.ipynb.txt  tutorial_Traj_Segmentation.ipynb.txt
_static/css/: custom.css
api/: classification.html  index.html  megabouts.html  pipeline.html  preprocessing.html  segmentation.html  tracking_data.html  utils.html
docs/source/: conf.py  index.rst  preprocessing.rst  tutorials.rst  usage.rst
megabouts/: AllSegmentationClass.py  CompareSuperResolutionOverFPS.ipynb  InitialSegmentation.py  MakeZebrafishMatlabCSV.ipynb  Outlier_Detection.ipynb  ROI_UMAP.py  SegmentationLocalLinearDynamicalSystem.py  __init__.py  bout_category_description.ipynb  free_swim_pipeline.ipynb  free_swim_pipeline.py  free_swim_pipeline2Change.py  head_fixed_pipeline.ipynb  head_restrained_pipeline.ipynb  head_restrained_pipeline_emi.ipynb  process_all_free_swim.py  process_all_head_restrained.py  process_all_super_resolution.py  super_resolution_pipeline.ipynb  trajectory.mat  untangle_trajectory.py
megabouts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
megabouts/classification/: __init__.py  benchmark_w_matlab.py  classification.py  classification_classes.py  classify.py  template_bouts.py  transformer_network.py
megabouts/config/: __init__.py  base_config.py  preprocessing.py  preprocessing_config.py  segmentation.py  segmentation_config.py  sparse_coding_config.py
megabouts/dictionary_learning/: BenchmarkingDictrionary.ipynb  LearnDictionnary.py
megabouts/gold_standard/: MakeZebrafishMatlabCSV.ipynb  classifier.py  utils.py
megabouts/half_beat/: half_beat_detector.py
megabouts/head_restrained/: Dict_MarquesClusters.npz  Dict_OptimizedHeadRestrained.npz  HeadRestrained_SparseCode.ipynb  HeadRestrained_SparseCode_ELENA.ipynb  utils.py
megabouts/io/: dataset.py
megabouts/pipeline/: __init__.py  base_config.py  base_pipeline.py  centroid_tracking.py  cfg.py  freely_swimming_pipeline.py  full_tracking.py  full_tracking_fast.py  full_tracking_fast_segmentation.py  full_tracking_tail_only.py  full_tracking_w_sparse_code.py  head_restrained_pipeline.py  tail_tracking.py
megabouts/preprocessing/: __init__.py  baseline.py  preprocessing.py  smoothing.py  tail_baseline.py  tail_preprocessing.py  traj_preprocessing.py  trajectory.py
megabouts/segmentation/: __init__.py  align.py  marques_segmentation.py  segment.py  segmentation.py  segmentation_classes.py  segmentation_config.py  threshold.py
megabouts/sparse_coding/: 4atomsDictHR_allTensor.npy  AtomDictionaryDanionella.npy  SparseEncodingFunctional.py  __init__.py  sparse_coding.py  sparse_coding_classes.py  sparse_coding_dict.npy
megabouts/super_resolution/: SuperResolution_SparseCode.ipynb  Super_Resolve_Bouts.py  TrajectoryPreprocessing.py  downsampling.py  utils.py
megabouts/tracking_data/: __init__.py  convert_tracking.py  dataset.py  load_example.py  tracking_data.py  tracking_data_classes.py
megabouts/utils/: __init__.py  data_utils.py  downsampling_utils.py  math_utils.py  plots_utils.py  smallestenclosingcircle.py  time_utils.py  utils.py  utils_beat.py  utils_benchmark.py  utils_bouts.py  utils_downsampling.py  utils_math.py  utils_plot.py
notebook/: bout_category_description.ipynb  free_swim_fast_pipeline .ipynb  free_swim_optimization.ipynb  free_swim_pipeline.ipynb  head_restrained_pipeline.ipynb  make_bout_dict.ipynb  super_resolution_pipeline.ipynb
notebooks/: Loading_Data.html  tutorial_FullTracking_Pipeline.html  tutorial_HeadRestrained_Pipeline.html  tutorial_Tail_Classification.html  tutorial_Tail_Preprocessing.html  tutorial_Tail_Segmentation.html  tutorial_TrajTracking_Pipeline.html  tutorial_Traj_Preprocessing.html  tutorial_Traj_Segmentation.html
tests/: conftest.py  test_notebooks.py  test_tracking.py
(+30 files in other folders)
